# synapse_gz

./: CMakeLists.txt  README.md  package.xml
launch/: synapse_gz.launch.py
src/: server.cpp  synapse_gz.cpp
src/clients/: .tcp_client.cpp.swp  gz_client.cpp  gz_client.hpp  tcp_client.cpp  tcp_client.hpp
src/clients/old/: tcp_client.cpp
src/link/: gz_client.cpp  gz_client.hpp  udp_link.cpp  udp_link.hpp
src/proto/: udp_link.cpp  udp_link.hpp
